# data-structures-and-algorithms

./: .gitignore  README.md  package-lock.json
javascript/: package-lock.json
javascript/code-challenges/: challenges-01.test.js  challenges-02.test.js  challenges-03.test.js  challenges-04.test.js  challenges-05.test.js  challenges-06.test.js  challenges-07.test.js  challenges-08.test.js  challenges-08.test.js.old  challenges-09.test.js  challenges-10.test.js  challenges-11.test.js  challenges-12.test.js  challenges-13.test.js  challenges-14.test.js
python/code_challenges/Insertion-Sort/: BLOG.md  Readme.md  insertion_sort.py  pyproject.toml  test_insertion_sort.py
python/code_challenges/Matrix_sum_rows/: matrix.py
python/code_challenges/Trees/: .gitignore  README.md  pyproject.toml
python/code_challenges/array-binary-search/: README.md
python/code_challenges/array-insert-shift/: README.md
python/code_challenges/array-reverse/: README.md
python/code_challenges/graph/: README.md  b_trip.py  graph.py  test_graph.py
python/code_challenges/hashmap/: README.md  hash_map.py  hashmap.draw  list_vs_Llist.ipynb  pyproject.toml  test_hashmap.py
python/code_challenges/hashmap/repeted_words/: README.md  repeated.py  test_repeated_words.py
python/code_challenges/hashmap_left_join/: README.md  hashmap_lj.py  pyproject.toml  test_left_join.py
python/code_challenges/k-ary tree/: Readme.md  fizz_buzz_tree.py  pyproject.toml
python/code_challenges/k-ary tree/tests/: __init__.py  test_fizz_buzz_tree.py
python/code_challenges/k_ary_tree/: README.md  pyproject.toml
python/code_challenges/linked_list/: README.md  pyproject.toml
python/code_challenges/linked_list/linked_list/: README.md  __main__.py  doubly-linked-list.py  linked-list-zip.py  linked_list.py
python/code_challenges/merge-Sort/: BLOG.md  Readme.md  merge_sort.py  test_merge_sort.py
python/code_challenges/quick-sort/: BLOG.md  Readme.md  pyproject.toml  quick_sort.py  test_quick_sort.py
python/code_challenges/stack-and-queue/: README.md  pyproject.toml
python/code_challenges/tree-breadth-first/: tree.py  (+1 more)
python/code_challenges/tree_breadth_first/: README.md  pyproject.toml
python/code_challenges/tree_breadth_first/tests/: test_tree_breadth_first.py
python/code_challenges/tree_breadth_first/tree_breadth_first/: tree.py  tree_bf.py
python/linked_list/: README.md  linked_list.py
python/tests/: test_linked_list.py
(+40 files in other folders)
