[tool.poetry]
name = "insertion_sort"
version = "0.1.0"
description = "cc26"
authors = ["Odeh <abuzaid163@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.10b0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
