[tool.poetry]
name = "hashmap"
version = "0.1.0"
description = ""
authors = ["Odeh <abuzaid163@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
