[tool.poetry]
name = "linked_list"
version = "0.1.0"
description = ""
authors = ["odehabuzaid <odeh.abuzaid@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.9b0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
