[tool.poetry]
name = "insertion_sort"
version = "0.1.0"
description = "cc26"
authors = ["Odeh <abuzaid163@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"


[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
